# superexacttestpy

./: LICENSE  README.md  pyproject.toml
Notebooks/: 02_Test_DpSets_Function.ipynb  R_script.R  Test_DpSets_Function.ipynb
docs/: README.md  api.md  conf.py  index.md  notebooks.md
docs/_static/: custom.css
docs/notebooks/: 01_dpsets_function.ipynb  02_intersection.ipynb  05_supertest.ipynb  06_plot.ipynb  example.ipynb
notebook/: 01_Test_DpSets_Function.ipynb  02_Test_DpSets_Function.ipynb  03_Intersection.ipynb  04_test_cpsets.ipynb  04_test_msets.ipynb  05_test_msets.ipynb  06_supertest.ipynb  07_plot.ipynb  R_script.R
notebooks/: 01_dpsets_function.ipynb  02_intersection.ipynb  03_cp_sets.ipynb  04_msets.ipynb  05_supertest.ipynb  06_plot.ipynb  07_plot.ipynb  08_issue_19.ipynb  R_script.R
superexacttestpy/: __init__.py
superexacttestpy/pl/: __init__.py  basic.py
superexacttestpy/tl/: __init__.py  basic.py
tests/: test_basic.py
