[build-system]
build-backend = "flit_core.buildapi"
requires = [
    "flit_core >=3.4,<4",
    "importlib_metadata>=0.7; python_version < '3.8'",
]


[project]
name = "superexacttestpy"
description = "Python implementation of the SuperExactTest algorithm"
authors = [
    {name = "Ignacio Ibarra"},
    {name = "Tom Mauger-Birocheau"}
]
maintainers = [
    {name = "Ignacio Ibarra", email = "ignacio.ibarra@helmholtz-muenchen.de"},
    {name = "Tom Mauger-Birocheau", email = "tom.mauger-birocheau@etu.univ-cotedazur.fr"}

]
urls.Documentation = "https://superexacttestpy.readthedocs.io/"
urls.Source = "https://github.com/theislab/superexacttestpy"
urls.Home-page = "https://github.com/theislab/superexacttestpy"
version = "0.0.1"
requires-python = ">=3.8"
license = {file = "LICENSE"}
readme = "README.md"
dependencies = ["anndata","UpSetPlot"]

[project.optional-dependencies]
dev = [
    # dev version generation
    "bump2version",
]
doc = [
    "sphinx>=4",
    "furo",
    "myst-parser",
    "sphinxcontrib-bibtex>=1.0.0",
    "scanpydoc[typehints]>=0.7.4",
    # For notebooks
    "nbsphinx",
    "ipython>=8.3.0"
]
test = [
    "pytest",
    "pytest-cov",
]

[tool.coverage.run]
source = ["superexacttestpy"]
omit = [
    "**/test_*.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
addopts = [
    "-Werror",  # if 3rd party libs raise DeprecationWarnings, just use filterwarnings below
    "--import-mode=importlib",  # allow using test files with same name
]
filterwarnings = [
    # "ignore:.*U.*mode is deprecated:DeprecationWarning",
]

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
profile = "black"
skip_glob = ["docs/*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.jupytext]
formats = "ipynb,md"
